# fantasy-autobattler

./: 01_game_vision_and_pillars.md  02_battle_system.md  03_units_and_abilities.md  04_army_building.md  05_scripting_and_orders.md  06_llm_commander.md  06_scripting_and_orders.md  07_llm_commander.md  07_multiplayer_and_match_flow.md  08_multiplayer_and_match_flow.md  09_external_assistant_integration.md  09_replay_system.md  12_external_assistant_integration.md  AGENTS.md  README.md  SESSION_CONTEXT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  spike.yml
.github/workflows/: ci.yml
core/: BUILD.stub  ENTRYPOINT.stub
desktop/: .gitignore  BUILD.stub  ENTRYPOINT.stub  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: coding_conventions.md  project_conventions.md
docs/architecture/: v1_architecture.md
docs/planning/: v1_roadmap.md
docs/reference/: tick_battle_scale_prototype_base_requirements.md
docs/requirements/: 02_battle_system.md  03_units_and_abilities.md  04_army_building.md  05_scripting_and_orders.md  06_llm_commander.md  07_multiplayer_and_match_flow.md  08_replay_system.md
server/: BUILD.stub  ENTRYPOINT.stub
sessions/: claude-design-docs.md
