[package]
name = "fantasy-autobattler-desktop"
version = "0.1.0"
description = "Fantasy Autobattler desktop app"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1" }

[dependencies]
tauri = { version = "1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
