[package]
name = "fantasy-autobattler-desktop"
version = "0.1.0"
description = "Fantasy Autobattler desktop app"
authors = ["Fantasy Autobattler Contributors"]
edition = "2021"

[lib]
name = "fantasy_autobattler_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
